--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,6 @@ docker==5.0.3
 docker-compose==1.29.2
 dockerpty==0.4.1
 docopt==0.6.2
-
 email-validator==1.2.1
 Flask==2.1.3
 Flask-Migrate==3.1.0
@@ -41,3 +40,6 @@ urllib3==1.26.10
 websocket-client==0.59.0
 Werkzeug==2.1.2
 WTForms==3.0.1
+Flask-Admin==1.6.0
+phonenumbers==8.12.54
+xmltodict==0.13.0
